external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/no_path_set_for_dependency/Move.snap
---
source: crates/move-package-alt/tests/manifest_parsing_tests.rs
---
Err(TOML parse error at line 6, column 5
  |
6 | A = { }
  |     ^^^
data did not match any variant of untagged enum ManifestDependencyInfo
)
